# make-py

./: .gitignore  README.md  hasher.py  make.py  pyproject.toml  structure.json  structure.yaml  structure.yml
src/app/: hasher.py  make.py  utils.py
tests/: test_aux.py  test_hasher.py  test_make.py  test_utils.py
utils/: utils.py
